updated SolJsonParserTest to not use getChildCount